k8s/be-deployment.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend-rollout
  namespace: backend
  labels:
    app: backend-rollout
  annotations:
    argocd-image-updater.argoproj.io/image-list: "duyquan/backend-main-server"
    argocd-image-updater.argoproj.io/backend-main-server.update-strategy: "semver"
    argocd-image-updater.argoproj.io/backend-main-server.allow-tags: "production-*"
spec:
  replicas: 2
  strategy:
    blueGreen:
      activeService: backend-service-active # Points to the stable version
      previewService: backend-service-preview # Points to the new version
      autoPromotionEnabled: false # Requires manual approval before switching
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: main-api
          image: duyquan/backend-main-server:production-e06bf2c730476c39c97fdf73f4981c58e6e4c759
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
