k8s/cms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directus
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: directus
  template:
    metadata:
      labels:
        app: directus
    spec:
      containers:
        - name: directus
          image: directus/directus:11.3.5
          ports:
            - containerPort: 8055
          volumeMounts:
            - name: uploads-storage
              mountPath: /directus/uploads
            - name: extensions-storage
              mountPath: /directus/extensions
            - name: db-cert
              mountPath: /etc/ssl/certs/do-ca.pem
              subPath: do-ca.pem
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "250m"
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: directus-uploads-pvc
        - name: extensions-storage
          persistentVolumeClaim:
            claimName: directus-extensions-pvc
        - name: db-cert
          configMap:
            name: directus-db-cert
