k8s/postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: patroni
spec:
  serviceName: patroni-service
  replicas: 3 # 1 leader + 2 followers
  selector:
    matchLabels:
      app: patroni
  template:
    metadata:
      labels:
        app: patroni
    spec:
      containers:
        - name: postgres
          image: ghcr.io/zalando/spilo-15:latest # Patroni-based PostgreSQL image
          ports:
            - containerPort: 5432 # PostgreSQL
            - containerPort: 8008 # Patroni REST API
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: patroni-storage
      volumes:
        - name: patroni-storage
          persistentVolumeClaim:
            claimName: patroni-pvc
