k8s/be-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-service
  ports:
    - name: backend-service
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
