k8s/cms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: directus
  namespace: backend
spec:
  selector:
    app: directus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8055
