k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: patroni-service
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: patroni
