k8s/voice_evaluation-service.yml
apiVersion: v1
kind: Service
metadata:
  name: voice-evaluation-service-active
  namespace: backend
spec:
  selector:
    app: voice-evaluation
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: voice-evaluation-service-preview
  namespace: backend
spec:
  selector:
    app: voice-evaluation
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
